2004-09-06  Timo Schulz  <twoaday@g10code.de>


2004-09-03  Timo Schulz  <twoaday@g10code.de>

	* GDGPG.cpp (UseLogging): New.
	(SetLogLevel): New.
	(SetLogFile): New.
	(LogInfo): New. Internal.
	(CGDGPG): Use GPG 'HomeDir' variable from the registry to find the
	correct GPG path.
	(CallGPG): Implemented logging.
	(GenerateKeyList): Ditto.
	(GetDefaultKey): Ditto.
	(CheckPassphrase): Ditto.
	(GetDecryptInfo): Ditto.
	* GDGPGO.cpp (DecryptNextFile): Implemented logging.
	(EncryptAndSignNextFile): Ditto.
	(ImportKeys): Ditto.
	(ExportStandardKey): Ditto.
	(GetGPGInfo): Ditto.
	(DecryptFile): Ditto.
	(VerifyDetachedSignature): Ditto.
	(EncryptAndSignFile): Ditto.


2004-08-23  Timo Schulz  <twoaday@g10code.de>

	* GDGPG.cpp (CallGPG): Change the I/O code. Do not
	cancel the process at the begin but read much as possible.
	Then wait for the process termination. This is also needed
	if the data is used via files.
	(GenerateKeyList): Store all user-id's to allow to search
	them all and not just the first.

	* GDGPGO.cpp (SetDefaultRecipients): See above.

	* Key.cpp s/SetParamter/SetParameter.
	s/SetSubParamter/SetSubParameter.
	(SetUserIDParameter): New.

2004-07-31  Timo Schulz  <twoaday@freakmail.de>

	* GDGPGO.cpp (VerifyDetachedSignature): New.

2004-07-21  Timo Schulz  <twoaday@freakmail.de>

	* GDGPGO.cpp (EncryptAndSignFile): Use the email address for
	the recipient and not the subkey ID. This solves the problem
	to select the appropriate subkey.

2004-07-20  Timo Schulz  <twoaday@freakmail.de>

	* GDGPGO.cpp (DecryptNextFile): Fix check for NULL bstring pointer.
	(EncryptAndSignNextFile): Likewise.
	* OptionsDlg.cpp (SelectFile): Check boundaries.

2003-11-08	Timo Schulz <twoaday@freakmail.de>

	* SelectKeyDlg.cpp (InsertKeyInList): Use a 0x prefixed
	keyid and do not show the long keyid. Decreased column width.
	(OnInitDialog): Adjusted column widths.
	* Resource file translated to English.
	* Key.cpp (SetParamter): Added more key status possibilities.