@@ -53,6 +53,7 @@
 #define IDC_BITMAP                      4007
 #define IDC_DEBUG_LOGFILE               4008
 #define IDB_BANNER                      4009
+#define IDC_VERSION_INFO                4009
 #define IDB_BANNER_HI                   4010
 
 // Next default values for new objects
@@ -61,7 +62,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        4012
 #define _APS_NEXT_COMMAND_VALUE         32771
-#define _APS_NEXT_CONTROL_VALUE         4009
+#define _APS_NEXT_CONTROL_VALUE         4010
 #define _APS_NEXT_SYMED_VALUE           4000
 #endif
 #endif
